# notes

agentic/: .env.example  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml  run.md
agentic/agentic/: __main__.py  config.py  contracts.py
agentic/agentic/agents/: __init__.py  coder.py  doc_agent.py  intake_prp.py  planner.py  reviewer.py  tester.py
agentic/agentic/orchestration/: _converter.py  client_cli.py  worker.py  workflows.py
agentic/agentic/tools/: __init__.py  brave_search.py  code_apply_patch.py  doc_utils.py  repo_graph_ts.py  review_tools.py  test_runner.py  web_fetch.py
agentic/examples/: markdown_service.json  sample_prp.json
gemma27b/: Maximizing Gemma 3 speed.md
gemma27b/src/: README.md  bench.py  prompts.txt  requirements.txt
hpc/: Object detection pipeline design-v3.md  Object detection pipeline design.md  gigapixel_open_vocabulary_satellite_detection_single_node_10_a_100_starter_kit-main.md  gigapixel_open_vocabulary_satellite_detection_single_node_10_a_100_starter_kit.md
hpc/src/: requirements.txt
hpc/src-synth/: MASTER.md  requirements.txt
hpc/src-synth/config/: config.yaml  config_with_automerge.yaml
hpc/src-synth/det/: d2_open_vocab.py  detr_open_vocab.py  open_vocab_match.py  sam_proposer.py
hpc/src-synth/docs/: SYNTH_PLAYBOOK.md
hpc/src-synth/embeddings/: tile_embedder.py
hpc/src-synth/eval/: coco_map.py  ov_retrieval.py  to_coco_preds.py
hpc/src-synth/models/: sensor_adapter.py
hpc/src-synth/tools/: merge_coco_multi.py  run_from_config.py  (+1 more)
hpc/src.v01/: MASTER.md
network/: network.txt
(+35 files in other folders)
